--- a/SoftServeITA/Docker/flask-app/Dockerfile
+++ b/SoftServeITA/Docker/flask-app/Dockerfile
@@ -1,11 +1,8 @@
 # our base image
-FROM alpine:3.5
+FROM alpine:3.16
 
 # Install python and pip
-RUN apk add --update py2-pip
-
-# upgrade pip
-RUN pip install --upgrade pip
+RUN apk add --update python3
 
 # install Python modules needed by the Python app
 COPY requirements.txt /usr/src/app/
